apply first styles

--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
-    <!-- Remember to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Apple Pie
+    <header class="header">
+      Apple Pie
+    </header>
+    <section class="paragraph"> 
+      <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
+        be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
+        favorites as well! </p>
+    </section>
 
-    This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
-    be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
-    favorites as well! 
-    
+   
     Ingredients 
     
     1 recipe pastry for a 9 inch double crust pie 
